exclude the build fields in query result
