# handlers/group.js
@@ -7,17 +7,17 @@ module.exports = {
     /**
      * summary: Create a Group (if not exist)
      * description: 
-     * parameters: groupId
+     * parameters: wxGroupId
      * produces: 
      * responses: 200
      */
-    put: function group_create(req, res, next) {
+    post: function group_create(req, res, next) {
         /**
          * Get the data for response 200
          * For response `default` status 200 is used.
          */
         var status = 200;
-        var provider = dataProvider['put']['200'];
+        var provider = dataProvider['post']['200'];
         provider(req, res, function (err, data) {
             if (err) {
                 next(err);
